--- a/Tarefas/Tarefa 2/Curriculo.html
+++ b/Tarefas/Tarefa 2/Curriculo.html
@@ -10,6 +10,7 @@
 <body>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
+            <div class="margem">
             <h1 class="apresentacao__conteudo__titulo">Apresentação</h1>
             <p class="apresentacao__conteudo__texto">
                 Nome: Gustavo Kubiaki da Silva
@@ -20,10 +21,9 @@
             <p>
                 Data de nascimento: 04/07/2005
             </p>
-            <p>
-                
-            </p>
+            </div>
 
+            <div class="margem">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto">
                 - Estou em um programa de jovem aprendiz com as empresas Polo Marista de Formação Tecnológica com o Grupo
@@ -34,6 +34,7 @@
             </p>
                 - Sou apaixonado por tecnologia e estou sempre em busca de novos desafios.
             </p>
+            </div>
 
             <div id="img">
                 <img class="foto" src="GustavoPUC (1).png" alt="Foto Gustavo Kubiaki">
@@ -41,6 +42,7 @@
 
             <p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
 
+            <div class="margem">
             <h2 class="apresentacao__conteudo__titulo">Objetivos (❗)</h2>
             <p class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
@@ -49,7 +51,9 @@
                 <li>Fornecer ajuda quando necessitarem.</li>
             </ul>
             </p>
+            </div>
 
+            
             <h2 class="apresentacao__conteudo__titulo">Experiências (🦾)</h2>
             <p class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
