--- a/Tarefas/Colunas/index.html
+++ b/Tarefas/Colunas/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>Aham</header>
         <div class="container">
-            <div class="coluna1">coluna2</div>
-            <div class="coluna2">coluna3</div>
+            <div class="coluna1"> Coluna1</div>
+            <div class="coluna2"> Coluna2</div>
         </div>
 </body>
 </html>
