--- a/Estudo JAVA SCRIPT/Atividade Mari/Número/Contagem.html
+++ b/Estudo JAVA SCRIPT/Atividade Mari/Número/Contagem.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Contagem de 1 até 10</title>
 </head>
 <body>
     <script>
-        
+        let n=0
+        while (n < 10){
+        alert(n=n+1)
+        }
+        alert("BOOM💣")
     </script>
 </body>
 </html>
