--- a/Estudo JAVA SCRIPT/Atividade Mari/Site para se inscrever/Formulário.html
+++ b/Estudo JAVA SCRIPT/Atividade Mari/Site para se inscrever/Formulário.html
@@ -41,7 +41,7 @@
         let gênero = window.prompt ('Qual é o seu gênero? ' + 'OBS: Masculino, Feminino ou NB')
             while(gênero != "Masculino" && gênero != "Feminino" && gênero != "NB")
 
-            {alert ('Gênero incorreto, tente novamente')
+            {alert ('Gênero não encontrado, tente novamente')
 
                 gênero = window.prompt ('Qual é o seu gênero? ' + 'OBS: Masculino, Feminino ou NB')}
                 // Gênero do usuário
@@ -55,10 +55,10 @@
                 // Estado civil do usuário
 
         if (nome == estado)
-                alert('Cadastro negado, tente novamente')
+                alert('Cadastro negado, tente novamente❌')
 
         else
-                alert('Cadastro com sucesso!')
+                alert('Cadastro com sucesso! ✔')
         }
     </script>
 
